--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,5 @@
 /*NAV BAR*/
-.navbar-custom {
-    background: linear-gradient(to right, #3c6a97, #264b70 49%, #0f3356 50%, #0a3056);
-    height: 120px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&display=swap');
 
 .navbar-custom h5 {
     color: white;
@@ -24,6 +21,88 @@
     transition: height 0.3s;
 }
 
+.navbar-custom{
+    background-color: #1b3039;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 90px;
+    padding: 5px 10%;
+    transition: all 0.3s;
+}
+
+.header .logo{
+    cursor: pointer;
+    order: 3;
+    margin-left: auto;
+}
+
+.header .logo img{
+    height: 70px;
+    width: auto;
+    transition: all 0.3s;
+}
+
+.header .logo img:hover{
+    transform: scale(1.2);
+}
+
+.header nav{
+    order: 1;
+}
+
+.header .nav-links{
+    list-style: none;
+}
+
+.header .nav-links li{
+    display: inline-block;
+    padding: 0 20px;    
+}
+
+.header .nav-links li:nth-child(1){
+    padding: 0 20px 0 0;
+}
+
+.header .nav-links li:hover{
+    transform: scale(1.1);
+}
+
+.header .nav-links a{
+    font-size: 700;
+    color: #eceff1;
+    text-decoration: none;   
+    font-size: 1.2rem; 
+}
+
+.header .nav-links li a:hover{
+    color: #82eb82;
+    font-size: 1.2rem; 
+}
+
+.header .btn{
+    order: 2;
+}
+
+.header .btn button{
+    margin-left: 20px;
+    font-weight: 700;
+    color: #1b3039;
+    padding: 9px 25px;
+    background: #eceff1;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    font-size: 1.2rem; 
+}
+
+.header .btn button:hover{
+    background-color: #e2f1f8;
+    color: #83f592;
+    transform: scale(1.1);
+}
+
 
 /*MENU ARRASTRABLE*/
 
@@ -42,6 +121,8 @@
 .img-fluid {
     max-width: 100%;
     height: auto;
+    margin-top: 20px; 
+    margin-bottom: 20px;
 }
 
 
@@ -54,4 +135,116 @@
 }
 
 
-/*espaciado a titulos*/
+
+/*Estilos para letras*/
+
+.nowrap {
+    white-space: nowrap;
+
+}
+
+.text-right {
+    text-align: right;
+}
+
+/*Estilos del diseñador*/
+
+
+/* Texto de menú */
+.navbar-custom h5 {
+    font-family: 'Grantha Sangam MN', sans-serif;
+    font-size: 25px;
+    font-weight: normal;
+}
+
+body {
+    font-family: 'Grantha Sangam MN', sans-serif;
+    font-size: 30px;
+    font-weight: normal;
+}
+
+h1, h2, h3, h5, h6 {
+    font-family: 'Grantha Sangam MN', sans-serif;
+    font-size: 54px;
+    font-weight: bold;
+}
+
+h4 {
+    font-family: 'Grantha Sangam MN', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+p, li {
+    font-family: 'Grantha Sangam MN', sans-serif;
+    font-size: 25px;
+    font-weight: normal;
+}
+/*texto preguntas*/
+.question-text {
+    font-family: 'Grantha Sangam MN', sans-serif;
+    font-size: 25px;
+    font-weight: normal;
+}
+
+.footer-data {
+    font-family: 'Grantha Sangam MN', sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+}
+
+.card-title {
+    font-size: 25px; /* Tamaño de fuente más pequeño */
+}
+
+
+/*margheens*/
+
+h1 {
+    margin: 5px 20px 20px 20px; /* Ajusta el valor según sea necesario */
+}
+
+/*boxes*/
+
+.green-box {
+    background-color: rgba(205, 255, 144, 0.5); /* Color verde limón con opacidad */
+    padding: 30px; /* Ajusta el padding según sea necesario */
+    border-radius: 20px;
+}
+
+/*cards*/
+.card-img-centered {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card {
+    flex: 1 1 300px; 
+    margin: 10px; 
+    display: flex;
+    flex-direction: column;
+}
+
+.card-body {
+    flex: 1; 
+}
+
+.card-img-top {
+    max-width: 100%; 
+    height: auto; 
+    margin: auto; 
+}
+  
+
+/*footer*/
+.footer-black {
+    background-color: #000;
+    color: #fff; /* Cambia el color del texto a blanco */
+}
