Se realiza commit de la redistribucion de l apagina y el faq. Asi como el cambio de imagenes.

--- a/css/styles.css
+++ b/css/styles.css
@@ -343,10 +343,17 @@ li {
 }
 
 
+
+/*FAQ SECTION */
+
+
+
 /*footer*/
 .footer-black {
     background-color: #000;
     color: #fff;
     /* Cambia el color del texto a blanco */
 }
+
+
 
